<resources>
    <string name="app_name">Routine</string>

    <string name="add_routine">Add Routine</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="settings">Settings</string>
    <string name="routine_name">ROUTINE NAME</string>
    <string name="start_time">START TIME</string>
    <string name="routine_name_edit_text_hint">Enter routine name here…</string>
    <string name="colon">:</string>
    <string name="end_time">END TIME</string>
    <string name="monday">Mo</string>
    <string name="recurrence">RECURRENCE</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="routine_name_cannot_be_empty">Routine name cannot be empty.</string>
    <string name="select_at_least_one_day_of_the_week">Select at least one day of the week.</string>
    <string name="hrs">hrs</string>
    <string name="duration">DURATION</string>
    <string name="mins">mins</string>
    <string name="duration_must_be_at_least_5_minutes">Duration must be at least 5 minutes.</string>
    <string name="routine_timings_overlap">"Routine timings overlap with another routine or extend into the next day."</string>
    <string name="okay">Okay</string>
    <string name="everyday">Everyday</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekend">Weekend</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="no_routines">No routines.</string>
    <string name="breakString">break</string>
    <string name="end_of_day">end of day</string>
    <string name="no">no</string>
    <string name="today">Today</string>
    <string name="refresh_widget">Refresh Widget</string>
    <string name="routine_synced">Routines Synced</string>
    <string name="loading">Loading…</string>
    <string name="auto_refresh_widget">Auto refresh widgets</string>
    <string name="info">Info</string>
    <string name="widget">WIDGET</string>
    <string name="auto_refreshing_your_widgets_may_slightly_affect_battery_life">Auto refreshing your widgets may slightly affect your battery life.</string>
    <string name="up_next">up next</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="reset_next_refresh">Reset next refresh</string>
    <string name="next_refresh_in">Next refresh in</string>
    <string name="general">GENERAL</string>
    <string name="share_app">Share app</string>
    <string name="about">ABOUT</string>
    <string name="rate_app">Rate app</string>
    <string name="version">Version</string>
    <string name="error">Error</string>
    <string name="send_feedback">Send feedback</string>
    <string name="routine_feedback">Routine Feedback</string>
    <string name="kindly_email_us">Kindly email us your feedback at cambiomobile@gmail.com</string>
    <string name="widgets_might_not_always_refresh_precisely_and_may_require_manual_refreshes_all_auto_refreshes_are_done_as_deferrable_background_work_to_prioritize_battery_life">Widgets might not always refresh precisely and may require manual refreshes. All auto refreshes are done as deferrable background work to prioritize battery life.</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>