<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_widget_background"
    android:padding="@dimen/widget_margin"
    android:id="@+id/routinesWidgetLinearLayout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_widget_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widgetTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:padding="@dimen/default_padding"
            android:singleLine="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:text="@string/today"/>

        <ImageView
            android:id="@+id/widgetRefresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding"
            android:contentDescription="@string/refresh_widget"
            android:src="@drawable/ic_refresh"/>

    </LinearLayout>

    <ListView
        android:id="@+id/routinesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:singleLine="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/no_routines"/>

</LinearLayout>