<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="routinesViewModel"
            type="mihirkathpalia.cambio.routine.ui.routines.RoutinesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routinesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomNavLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomNavLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:gravity="center"
            android:singleLine="false"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/no_routines"/>

        <LinearLayout
            android:id="@+id/bottomNavLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:background="?attr/bottomNavBackgroundColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/settings"
                android:background="@drawable/drawable_button_effect"
                android:onClick="@{() -> routinesViewModel.settingsOnClick()}"
                android:padding="@dimen/default_padding"
                app:srcCompat="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/switchThemeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/switch_theme"
                android:background="@drawable/drawable_button_effect"
                android:onClick="@{() -> routinesViewModel.themeOnSwitch()}"
                android:padding="@dimen/default_padding"
                app:srcCompat="@drawable/ic_theme" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.4" />

            <ImageButton
                android:id="@+id/addRoutineButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/add_routine"
                android:background="@drawable/drawable_button_effect"
                android:onClick="@{() -> routinesViewModel.addOnClick()}"
                android:padding="@dimen/default_padding"
                app:srcCompat="@drawable/ic_add" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>